Fixed header on mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -395,7 +395,7 @@ dt {
 dd {
   margin-left: 0; }
 
-@media (min-width: 862px) {
+@media (min-width: 992px) {
   .dl-horizontal dt {
     float: left;
     width: 160px;
@@ -2296,7 +2296,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
   bottom: 100%;
   margin-bottom: 1px; }
 
-@media (min-width: 862px) {
+@media (min-width: 992px) {
   .navbar-right .dropdown-menu {
     right: 0;
     left: auto; } }
@@ -2659,7 +2659,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
     /* 2 */ }
   .navbar:after {
     clear: both; }
-  @media (min-width: 862px) {
+  @media (min-width: 992px) {
     .navbar {
       border-radius: 4px; } }
 
@@ -2670,7 +2670,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
   /* 2 */ }
 .navbar-header:after {
   clear: both; }
-@media (min-width: 862px) {
+@media (min-width: 992px) {
   .navbar-header {
     float: left; } }
 
@@ -2691,7 +2691,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
     clear: both; }
   .navbar-collapse.in {
     overflow-y: auto; }
-  @media (min-width: 862px) {
+  @media (min-width: 992px) {
     .navbar-collapse {
       width: auto;
       border-top: 0;
@@ -2713,7 +2713,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
 .container > .navbar-header, .container > .navbar-collapse {
   margin-right: -15px;
   margin-left: -15px; }
-  @media (min-width: 862px) {
+  @media (min-width: 992px) {
     .container > .navbar-header, .container > .navbar-collapse {
       margin-right: 0;
       margin-left: 0; } }
@@ -2721,7 +2721,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
 .navbar-static-top {
   z-index: 1000;
   border-width: 0 0 1px; }
-  @media (min-width: 862px) {
+  @media (min-width: 992px) {
     .navbar-static-top {
       border-radius: 0; } }
 
@@ -2730,7 +2730,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
   right: 0;
   left: 0;
   z-index: 1030; }
-  @media (min-width: 862px) {
+  @media (min-width: 992px) {
     .navbar-fixed-top, .navbar-fixed-bottom {
       border-radius: 0; } }
 
@@ -2750,7 +2750,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
   line-height: 25px; }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none; }
-  @media (min-width: 862px) {
+  @media (min-width: 992px) {
     .navbar > .container .navbar-brand {
       margin-left: -15px; } }
 
@@ -2771,7 +2771,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
     border-radius: 1px; }
   .navbar-toggle .icon-bar + .icon-bar {
     margin-top: 4px; }
-  @media (min-width: 862px) {
+  @media (min-width: 992px) {
     .navbar-toggle {
       display: none; } }
 
@@ -2796,7 +2796,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
         line-height: 25px; }
         .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-nav .open .dropdown-menu > li > a:focus {
           background-image: none; } }
-  @media (min-width: 862px) {
+  @media (min-width: 992px) {
     .navbar-nav {
       float: left;
       margin: 0; }
@@ -2806,7 +2806,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
           padding-top: 12.5px;
           padding-bottom: 12.5px; } }
 
-@media (min-width: 862px) {
+@media (min-width: 992px) {
   .navbar-left {
     float: left !important; }
   .navbar-right {
@@ -2825,7 +2825,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
   @media (max-width: 767px) {
     .navbar-form .form-group {
       margin-bottom: 5px; } }
-  @media (min-width: 862px) {
+  @media (min-width: 992px) {
     .navbar-form {
       width: auto;
       border: 0;
@@ -2857,7 +2857,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
   float: left;
   margin-top: 12.5px;
   margin-bottom: 12.5px; }
-  @media (min-width: 862px) {
+  @media (min-width: 992px) {
     .navbar-text {
       margin-left: 15px;
       margin-right: 15px; } }
@@ -4400,18 +4400,24 @@ aside {
     aside a:hover {
       text-decoration: none; }
 
+.navbar {
+  height: 50px; }
+
 .navbar-brand {
-  padding: 12.5px;
-  height: 1.4em;
-  font-size: 1.4em;
-  text-transform: none; }
+  height: 50px;
+  padding: 5px; }
   .navbar-brand img {
-    margin-top: -7.5px;
+    height: 2em;
     padding-right: 12.5px; }
+  @media (max-width: 480px) {
+    .navbar-brand span {
+      display: none; } }
 
 .navbar-collapse, .navbar-toggle {
   color: #fafafa;
-  font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 24px;
+  margin: 3px; }
 
 .navbar-nav {
   display: inline-block;
